--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-native-community/masked-view": "^0.1.11",
     "axios": "^1.3.2",
     "expo": "~47.0.12",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-maps": "1.3.2",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
